Project aplikasi_kasir_sederhana {
  database_type: "SQLite"
}

Table users {
  id integer [pk, increment]
  nama varchar(100) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  role varchar(20) [not null] // admin | kasir
  created_at timestamp
}

Table categories {
  id integer [pk, increment]
  nama_kategori varchar(100) [not null]
  created_at timestamp
}

Table products {
  id integer [pk, increment]
  category_id integer [not null, ref: > categories.id]
  nama_produk varchar(100) [not null]
  harga integer [not null]
  stok integer [not null]
  created_at timestamp
}

Table transactions {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  tanggal timestamp [not null]
  total integer [not null]
}

Table transaction_details {
  id integer [pk, increment]
  transaction_id integer [not null, ref: > transactions.id]
  product_id integer [not null, ref: > products.id]
  qty integer [not null]
  subtotal integer [not null]
}

Table payments {
  id integer [pk, increment]
  transaction_id integer [not null, unique, ref: > transactions.id]
  metode_pembayaran varchar(50) [not null] // Tunai | QRIS | Transfer
  jumlah_bayar integer [not null]
  kembalian integer [not null]
  waktu_pembayaran timestamp
}

